kubernetes/01-namespace.yml
kind: Namespace 
apiVersion: v1

metadata: 
  name: jobportal
  labels: 
    name: jobportal 
    environment : production
