kubernetes/06-mongodb-statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata: 
  name: mongodb-statefulset
  namespace: jobportal
spec: 
  serviceName: "mongodb-service"
  replicas: 2
  selector: 
    matchLabels: 
      app: mongodb
  template: 
    metadata: 
      labels: 
        app: mongodb
    spec: 
      containers: 
        - name: mongodb
          image: mongo:6.0
          ports: 
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
  volumeClaimTemplates:
    claimName: mongodb-pvc
