kubernetes/07-jobportal-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: jobportal-deployment
  namespace: jobportal
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: jobportal
    template: 
      metadata: 
        labels: 
          app: jobportal
      spec: 
        containers: 
          - name: jobportal
            image: sauravmishra07/jobportal:latest
            ports: 
              - containerPort: 3000
            resources:
              requests:
                memory: "256Mi"
                cpu: "200m"
              limits:
                memory: "512Mi"
                cpu: "500m"
            startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 20
