kubernetes/05-mongodb-service.yml
kind: Service
apiVersion: v1

metadata: 
  name: mongodb-service
  namespace: jobportal
spec:
  selector: 
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
