kubernetes/08-service.yml
kind: Service
apiVersion: v1
metadata: 
  name: jobportal-service
  namespace: jobportal
spec: 
  type: Nodeport
  ports: 
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector: 
    app: jobportal
