kubernetes/09-ingress.yml
apiVersion: netwokring.k8s.io/v1
kind: Ingress
metadata: 
  name: jobportal-ingress
  namespace: jobportal
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
  - hosts:
      - jobportal.nip.io
    secretName: jobportal-tls-secret
  rules: 
    - host: jobportal.nip.io
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend: 
            service: 
              name: jobportal-service
              port: 
                number: 80
